[tool.poetry]
name = "quantfinpy"
version = "0.1.0"
description = "Quantfin.py is a python package focus on implementing the ideas in the book Advances in Financial Machine Learning by Dr Prado. This package modify some of the codes, format with the modern Black format."
authors = ["Robert Bach"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
