[tool.poetry]
name = "quantfinpy"
version = "0.1.0"
description = "Quantfin.py is a python package focus on implementing the ideas in the book Advances in Financial Machine Learning by Dr Prado. This package modify some of the codes, format with the modern Black format."
authors = ["Robert Bach"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.22,<1.27"
numba = "^0.60.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1"
pytest-cov = ">=4.0"
python-semantic-release = "^9.8.8"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.2"
sphinx-rtd-theme = "^2.0.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
